resource/style/global.css
body
{
	
}
#wrapper{
	background-color: #4A6686;
	font-family: Arial, Helvetica, sans-serif;
}
#content,#splash{
	display: none;
}
.red{
	
	min-height:100%;
	background-color: #e4e4e4;
	border:1px solid #CCCCCC;
	padding:20px;
}

#splash
{
	background: url(../image/splash.jpg) no-repeat center center #273645;
	color: #e4e4e4;
	font-size:40px;
	text-align: center;
	
}

#header{
	
	background-color: #273645;
	display:none;
	color: #e4e4e4;
	font-size:30px;
	text-align: center;
	
}
#header h1{
	padding-top:20px;
}
#header p{
	padding-top: 10px;
}
#footer{

	background-color: #273645;
	display:none;
	min-height: 20px;
}
#searchListHolder,#playListHolder
{
	width:100%;
	height:100%;
	margin-left: auto;
	margin-right: auto;
}
.blueholder
{
	width:100%;
	height: 200px;
}

#wrapper li
{
	
}
.gallery
{
	margin-left:auto;
	margin-right:auto;
	width:320px;
	height:300px;
	overflow: hidden;
}
.gallery ul
{
	width:1280px;
}
.gallery ul li
{
	float: left;
	background-color: #333333;
	
}
.gallery ul li img
{
	width:320px;
}
.navHolder ul
{
	width:100%;
	background-color: #333;
	height: auto;
}
.navHolder ul li{
	width:24%;
	text-align: center;
	background-color: #333;
	color:#E4E4E4;
	padding-top: 10px;
	padding-bottom: 10px;
	margin-right: 1%;
	float: left;
	
}
.navHolder ul li.last
{
	margin-right: 0;
	width:25%;
}
.navHolder ul li:active
{
	background-color: #E4E4E4;
	color:#333;
}
.bar{
	width:200px;
	min-height: 2px;
	background-color: #E4E4E4;
	margin-top: 50px;
	margin-left: auto;
	margin-right: auto;
	color:#E4E4E4;
	position: relative;
}
.handle
{
	background-color: #333;
	width:20px;
	height:20px;
	 -moz-border-radius: 20px;
    -webkit-border-radius: 20px;
    -khtml-border-radius: 20px;
    border-radius: 20px;
    position:absolute;
    margin-top:-10px;
}
#percent
{
	margin-top:10px;
	width:200px;
	padding:20px;
	 -moz-border-radius: 20px;
    -webkit-border-radius: 20px;
    -khtml-border-radius: 20px;
    border-radius: 20px;
    background-color: #E4E4E4;
    margin-left: auto;
	margin-right: auto;
	border-right: 1px solid #333;
	color:#333333;
	text-align: center;
	font-size:20px;
	font-weight: bold;
}
#searchbar
{
	width:100%;
	height:40px;
	background-color: #333;
	text-align: center;
}
#searchBox
{
	text-align:center;
	width:65%;
	height:20px;
	 -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    -khtml-border-radius: 5px;
    border-radius: 5px;
    border:2px solid #666;
    float:left;
    margin-left: 10%;
    margin-top:10px;
}
#searchButton
{
	width:15%;
	height:25px;
	margin-left:1%;
	 -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    -khtml-border-radius: 5px;
    border-radius: 5px;
	margin-top:10px;
	 float:left;
	 background-color: #6D97C6;
	 border:0px solid #ccc;
	 color: #E4E4E4;
	 cursor:pointer;
}
#searchList,#playList
{
	width:100%;
	max-width:100%;
	padding-bottom: 20px;
	
}
#searchList .searchListLi
{
	height: auto;
	width:100%;
	background-color: #becedf;
	border-bottom: 2px solid #333333;
	padding-top:10px;
	padding-bottom:10px;
}
#playList .playListLi
{
	height: auto;
	width:100%;
	background-color: #becedf;
	border-bottom: 2px solid #333333;
}
#searchList li p.title
{
	padding: 10px;
	width:70%;
	overflow: hidden;
}
#playList li p.title
{
	padding: 10px;
	width:70%;
	overflow: hidden;
	float:left;
}
.heading
{
	width:100%;
	height:40px;
	background-color: #333;
	text-align: center;
}
.heading h1
{
	padding: 10px;
	color:#e4e4e4;
	font-size:16px;
	font-weight: bold;
}
.searchItemUL .searchItemLI
{
	float:left;
}
.clearBoth
{
	float:none;
	clear: both;
}
.searchItemImage
{
	width:50px;
	height:50px;
	padding-left:10px;
}
#player
{
	width:100%;
	height:100%;
}
.addButton
{
background-image: url(../image/add_button.png);
width: 56px;
height: 35px;
cursor: pointer;
}
.smallControlSelected {
background-position: -112px;
}
.playListLi .playButton {
background-image: url(../image/playlist_play.png);
width: 56px;
height: 35px;
float:left;
margin-right: 10px;
}

